working on the issue of image not displaying after deployment

--- a/resume/index.html
+++ b/resume/index.html
@@ -206,7 +206,7 @@
       <div class="p-grid">
         <div class="project-grid">
           <div class="project-img">
-            <img class="image" src="/resume/images/project1.jpg" alt="">
+            <img class="image" src="images/project1.jpg" alt="">
             <strong>2021</strong>
           </div>
           <div class="project-details">
@@ -221,7 +221,7 @@
 
         <div class="project-grid">
           <div class="project-img">
-            <img class="image" src="/resume/images/project2.jpg" alt="">
+            <img class="image" src="images/project2.jpg" alt="">
             <strong>2021</strong>
           </div>
           <div class="project-details">
@@ -236,7 +236,7 @@
 
         <div class="project-grid">
           <div class="project-img">
-            <img class="image" src="/resume/images/project3.jpg" alt="">
+            <img class="image" src="images/project3.jpg" alt="">
             <strong>2018</strong>
           </div>
           <div class="project-details">
@@ -251,7 +251,7 @@
 
         <div class="project-grid">
           <div class="project-img">
-            <img class="image" src="/resume/images/project5.jpg" alt="">
+            <img class="image" src="images/project5.jpg" alt="">
             <strong>2016</strong>
           </div>
           <div class="project-details">
